fix(tooltip) Add bootstrap css back in for tooltips, fix spacing

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 
 h1 {
   font-size: 26px;
-  margin-top: 0.5em;
+  margin-top: 0px;
   margin-bottom: 0px;
 }
 
